# kokoro.cpp

./: .gitignore  CMakeLists.txt  EnG2P.h  JiebaProcessor.h  Kokoro.cpp  Kokoro.h  PinyinFinder.cpp  PinyinFinder.h  README.md  Tokenizer.cpp  Tokenizer.h  ToneSandhi.cpp  ToneSandhi.h  Utils.h  ZHFrontend.cpp  ZHFrontend.h  ZHG2P.cpp  ZHG2P.h  kokoro_main.cpp  main.cpp  missing_symbols.cpp
.github/workflows/: release.yml
dict/: pinyin.txt
scripts/: convert_dict.py  export_vocab.py  export_voices.py
server/: server_main.cpp  wav_memory.cpp  wav_memory.h
